// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`reader golden files > renders invalid-attribute.json as its golden HTML 1`] = `
"<div>
<div role="group" aria-label="Unsupported content: heading" data-rte-island="">
</div>
<div role="note" data-rte-message="islands" lang="en-US">Some content is not supported here.</div>
</div>"
`;

exports[`reader golden files > renders the valid fixture blocks.json as its golden HTML 1`] = `
"<div dir="rtl">
<h1>Plan</h1>
<ol start="0">
<li>
<p>
</p>
<ul>
<li>
<p>
<span data-rte-mention="">@<!-- -->Ada</span>
</p>
</li>
</ul>
</li>
</ol>
<div data-rte-column-break="">
</div>
<pre>
<code>const a = 1;
	b();</code>
</pre>
<hr/>
<table>
<thead>
<tr>
<th colSpan="2" rowspan="1" scope="col">
<p>
</p>
</th>
</tr>
</thead>
<tbody>
<tr>
<td colSpan="1" rowspan="1">
<p>
</p>
</td>
<td colSpan="1" rowspan="1">
<blockquote>
<p>
</p>
</blockquote>
</td>
</tr>
</tbody>
</table>
<figure>
<img alt=""/>
</figure>
<div data-rte-provider="youtube">
</div>
</div>"
`;

exports[`reader golden files > renders the valid fixture marks.json as its golden HTML 1`] = `
"<div lang="de-CH">
<p>Grüezi <a href="https://frontify.com">
<span data-rte-color="brand.red">
<strong>Welt</strong>
</span>
</a>
<em>
<br/>
</em>
<mark>H</mark>
<sub>2</sub>
<span lang="en" dir="ltr">O 😀</span>
</p>
</div>"
`;

exports[`reader golden files > renders unknown-attribute.json as its golden HTML 1`] = `
"<div>
<p>Warm words</p>
</div>"
`;

exports[`reader golden files > renders unknown-attribute.json as its golden HTML 2`] = `
"<div>
<p>a</p>
</div>"
`;

exports[`reader golden files > renders unknown-mark.json as its golden HTML 1`] = `
"<div>
<p>Plain <strong>sparkly</strong> end</p>
</div>"
`;

exports[`reader golden files > renders unknown-mark.json as its golden HTML 2`] = `
"<div>
<p>a</p>
</div>"
`;

exports[`reader golden files > renders unknown-node.json as its golden HTML 1`] = `
"<div>
<div role="group" aria-label="Unsupported content: callout" data-rte-island="">
</div>
<div role="note" data-rte-message="islands" lang="en-US">Some content is not supported here.</div>
</div>"
`;

exports[`reader golden files > renders unknown-nodes.json as its golden HTML 1`] = `
"<div>
<p>Before</p>
<div role="group" aria-label="Unsupported content: callout" data-rte-island="">Heads up &lt;b&gt;&amp;&lt;/b&gt;</div>
<ul>
<li>
<p>Item</p>
<div role="group" aria-label="Unsupported content: poll" data-rte-island="">Deep</div>
</li>
</ul>
<div role="group" aria-label="Unsupported content" data-rte-island="">
</div>
<p>Mood <span role="group" aria-label="Unsupported content: sticker" data-rte-island="">smile</span> and after</p>
<div role="group" aria-label="Unsupported content: embed3d" data-rte-island="">
</div>
<p>After</p>
<div role="note" data-rte-message="islands" lang="en-US">Some content is not supported here.</div>
</div>"
`;

exports[`reader golden files > renders unsafe-url.json as its golden HTML 1`] = `
"<div>
<p>a</p>
</div>"
`;
